--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Muzammil2017.github.io/iptproject",
+  "homepage": "https://Muzammil2017.github.io/iptproject",
   "name": "iptfrontend",
   "version": "0.1.0",
   "private": true,
